<resources>
    <string name="app_name">Álcool e Saúde</string>
    <string name="welcome_1">Bem vindo ao Álcool e Saúde.</string>
    <string name="welcome_2">Você sabe o quanto o álcool pode afetar a sua saúde ?</string>
    <string name="welcome_3">Avalie o seu beber. A avaliação é gratuita e sempre será!</string>
    <string name="welcome_4">O conteúdo foi criado por profissionais de saúde e especialistas na área.</string>
    <string name="button_evaluate">Começar a Avaliação</string>
    <string name="hello">Olá!</string>
    <string name="questions_0">Para saber o quanto você bebe e os impactos para a sua saúde, precisamos das seguintes informações:</string>
    <string name="questions_1">01 - Sexo</string>
    <string name="questions_1_preg">Você está grávida ou tem chance de estar grávida?</string>
    <string name="questions_2">02 - Nascimento</string>
    <string name="questions_3">03 - Às vezes, você bebe, cerveja, cachaça, vinho ou outras bebidas alcoólicas - mesmo em pouca quantidade ?</string>
    <string name="female">Feminino</string>
    <string name="male">Masculino</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="next">Próximo</string>
    <string name="back">Voltar</string>
    <string name="audit_3_1">01. Com que frequência você consome bebidas alcoólicas? </string>
    <string name="audit_3_selectitem_1">Nunca</string>
    <string name="audit_3_selectitem_2">1 vez ao mês ou menos</string>
    <string name="audit_3_selectitem_3">De 2 a 4 vezes por mês</string>
    <string name="audit_3_selectitem_4">De 2 a 3 vezes por semana</string>
    <string name="audit_3_selectitem_5">4 ou mais vezes por semana</string>
    <string name="questions_5">02. Nas ocasiões em que bebe, quantas doses (*veja na ilustração acima quanto é uma dose) você consome tipicamente ao beber?</string>
    <string name="audit3_2_1">1 ou 2</string>
    <string name="audit3_2_2">3 ou 4</string>
    <string name="audit3_2_3">5 ou 6</string>
    <string name="audit3_2_4">7, 8 ou 9</string>
    <string name="audit3_2_5">10 ou mais</string>
    <string name="questions_6">03. Com que frequência você toma seis ou mais doses* de uma vez?</string>
    <string name="audit3_3_1">Nunca</string>
    <string name="audit3_3_2">1 vez ao mês ou menos</string>
    <string name="audit3_3_3">Mensalmente</string>
    <string name="audit3_3_4">Semanalmente</string>
    <string name="audit3_3_5">Todos ou quase todos os dias</string>
    <string name="audit_text">A seguir vamos avaliar o seu consumo de álcool. Algumas destas perguntas são relativas à quantidade de álcool que você consumiu no último ano:</string>
    <string name="audit_4">04. Quantas vezes ao longo dos últimos 12 meses você achou que não conseguiria parar de beber uma vez tendo começado?</string>
    <string name="audit_5">05. Quantas vezes ao longo dos últimos 12 meses por causa do álcool, não conseguiu fazer o que era esperado de você?</string>
    <string name="audit_6">06. Quantas vezes ao longo dos últimos 12 meses você precisou beber pela manhã para poder se sentir bem ao longo do dia após ter bebido bastante no dia anterior?</string>
    <string name="audit_7">07. Quantas vezes ao longo dos últimos 12 meses você se sentiu culpado ou com remorso depois de ter bebido?</string>
    <string name="audit_8">08. Quantas vezes ao longo dos últimos 12 meses você foi incapaz de lembrar o que aconteceu devido a bebida?</string>
    <string name="audit_9">09. Você já causou ferimentos ou prejuízos a você mesmo ou a outra pessoa após ter bebido?</string>
    <string name="audit_10">10. Algum parente, amigo ou médico já se preocupou com o fato de você beber ou sugeriu que você parasse?</string>
    <string name="audit_never">Nunca</string>
    <string name="audit_once">Menos que uma vez ao mês</string>
    <string name="audit_monthly">Mensalmente</string>
    <string name="audit_weekly">Semanalmente</string>
    <string name="audit_every_day">Todos ou quase todos os dias</string>
    <string name="audit_yes_yearNo">Sim, mas não no ano passado</string>
    <string name="audit_yes_yearYes">Sim, no ano passado</string>
    <string name="congratulations">Parabéns</string>
    <string name="feedback_abstainers">Você relatou não consumir álcool, dessa forma você evita diversos problemas de saúde decorrentes do consumo excessivo.</string>
    <string name="feedback_abstainers_limits">Confira a seguir os limites do beber de baixo risco, caso venha a beber no futuro:</string>
    <string name="feedback_abstainers_limits_men">No máximo duas doses padrão por ocasião, no máximo 5 dias na semana.</string>
    <string name="feedback_abstainers_limits_women">No máximo uma doses padrão por ocasião, no máximo 5 dias na semana.</string>
    <string name="feedback_abstainers_problems">Mesmo o beber de baixo risco pode apresentar problemas:</string>
    <string name="feedback_abstainers_problems_1">É importante que você evite o uso de álcool junto com medicamentos.</string>
    <string name="feedback_abstainers_problems_2">Diversas condições de saúde podem ser agravadas pelo uso de álcool.</string>
    <string name="feedback_abstainers_problems_3">Pessoas acima de 60 anos devem evitar o consumo de álcool.</string>
    <string name="more_info_title">Se você gostaria de aprofundar mais sobre o assunto, preparamos um material para você no link abaixo.</string>
    <string name="feedback_abstainers_button_1">Limites</string>
    <string name="feedback_abstainers_button_2">Possíveis problemas</string>
    <string name="more_info">Mais informações</string>
    <string name="men">Homens</string>
    <string name="women">Mulheres</string>
    <string name="more_info_button">Acessar</string>
    <string name="feedback_abstainers_info_button">Acessar</string>
    <string name="feedback_pregnancyno_titulo">Informações para menores de 18 anos</string>
    <string name="feedback_pregnancyno_intro">Parabéns por não consumir álcool! A adolescência é um período único para o desenvolvimento do cérebro.</string>
    <string name="feedback_pregnancyno_recomendacoes_1">Estudos apontam que mesmo os adolescentes que consomem álcool a pouco tempo, podem ter uma diminuição do volume do cérebro. Ao longo do tempo, adolescentes que consomem álcool, podem também ter maiores dificuldades para resolver problemas que exigem o uso de raciocínio.</string>
    <string name="feedback_pregnancyno_recomendacoes_2">Ao evitar consumir álcool você não só preserva o seu cérebro por mais tempo, como também evita outros possíveis danos que podem estar associados com problemas de saúde, acidentes, brigas e discussões.</string>
    <string name="feedback_pregnancyno_recomendacoes_3">Aprender a se divertir e aproveitar a vida de forma mais saudável é sempre uma escolha boa!</string>
    <string name="feedback_pregnancyno_recomendacoes_4">Caso tenha dúvidas ou venha a consumir álcool no futuro procure um profissional de saúde e converse sobre este assunto.</string>
    <string name="feedback_pregnancyno_recomendacoes_5">Confira a seguir algumas das dúvidas frequentes entre adolescentes</string>
    <string name="feedback_pregnancyno_duvidas_titulo">Dúvidas</string>
    <string name="feedback_pregnancyno_duvidas_1">Continuar sem beber</string>
    <string name="feedback_pregnancyno_duvidas1_5">1. Por que devo continuar sem beber?</string>
    <string name="feedback_pregnancyno_duvidas1_1">O consumo de álcool está associado com uma série de problemas</string>
    <string name="feedback_pregnancyno_duvidas1_2">Muitos destes problemas demoram para aparecer e outros são mais visíveis</string>
    <string name="feedback_pregnancyno_duvidas1_3">Problemas de saúde, legais e acidentes estão associados com o consumo de álcool</string>
    <string name="feedback_pregnancyno_duvidas1_4">Adolescentes e adultos podem ter o seu desenvolvimento prejudicado pelo álcool, reduzindo seu desempenho em esportes, estudo e trabalho</string>
    <string name="feedback_pregnancyno_duvidas_2">Experimentar</string>
    <string name="feedback_pregnancyno_experimentar_titulo">2. Caso eu não beba, mas esteja pensando em experimentar?</string>
    <string name="feedback_pregnancyno_experimentar_1">Recomendamos em seu caso esteja considerando experimentar álcool ou começar a beber que procure um profissional de saúde para se informar melhor.</string>
    <string name="feedback_pregnancyno_experimentar_2">Não recomendamos que comece a beber no momento, adolescentes estão muito mais expostos às consequências negativas relacionados ao consumo do álcool.</string>
    <string name="feedback_pregnancyno_experimentar_3">O conteúdo deste site não foi desenvolvido especialmente para adolescentes, mas algumas dicas podem ser úteis.</string>
    <string name="feedback_pregnancyno_experimentar_4">Saiba que existem diversos meios para resistir a pressão de beber. Sempre procure ajuda ou apoio quando estiver sentindo-se sob pressão em relação à este assunto.</string>
    <string name="feedback_pregnancyno_experimentar_5">Caso alguém lhe ofereça bebida, sempre diga</string>
    <string name="feedback_pregnancyno_experimentar_6">Procure manter-se longe de pessoas ou lugares que o pressionam a começar a beber</string>
    <string name="feedback_pregnancyno_experimentar_7">Caso não consiga resistir e venha a consumir álcool o quanto antes conseguir parar menores serão os efeitos negativos do consumo - procure um profissional de saúde e peça ajuda</string>
    <string name="feedback_pregnancyno_experimentar_8">Caso não tenha acesso a um profissional de saúde, utilize o Viva Voz (disque 132 - ligação gratuita)</string>
    <string name="feedback_pregnancyno_info">Se você gostaria de aprofundar mais sobre o assunto, preparamos um material para você no link abaixo.</string>
    <string name="feedback_pregnancyno_info_button">Acessar</string>
    <string name="feedback_pregnancyyes_titulo">Informações para Gestantes</string>
    <string name="feedback_pregnancyyes_intro">Cuidado! Você relatou fazer consumo de álcool - o que é extremamente prejudicial para o bom desenvolvimento do seu bebê.</string>
    <string name="feedback_pregnancyyes_button_1">Recomendações</string>
    <string name="feedback_pregnancyyes_button_2">Dúvidas</string>
    <string name="feedback_pregnancyyes_button_3">Mais informações</string>
    <string name="feedback_pregnancyyes_recomendacoes_titulo">É fundamental que permaneça sem beber durante toda a gravidez e mesmo durante o período em que estiver amamentando.</string>
    <string name="feedback_pregnancyyes_recomendacoes_1">Recomendamos fortemente que pare de beber e que procure assim que possível profissional de saúde que possa ajudá-la.</string>
    <string name="feedback_pregnancyyes_recomendacoes_2">Este ainda não possui ferramentas específicas para gestantes.</string>
    <string name="feedback_pregnancyyes_recomendacoes_3">Recomendamos que leia as dúvidas sobre álcool e gravidez a seguir, elas podem lhe ajudar.</string>
    <string name="feedback_pregnancyyes_duvidas_titulo">Dúvidas</string>
    <string name="feedback_pregnancyyes_duvidas_1">Consumo</string>
    <string name="feedback_pregnancyyes_duvidas_2">Tipo bebida</string>
    <string name="feedback_pregnancyyes_duvidas_3">Segunda gestação</string>
    <string name="feedback_underagedrinkingyes">Informações para menores de 18 anos</string>
    <string name="feedback_underagedrinkingyes_1">Você não deveria consumir álcool</string>
    <string name="sobre_1">Os autores</string>
    <string name="sobre_2">Prof. Dr. Telmo Mota Ronzani (UFJF)</string>
    <string name="sobre_3">Profa. Dra. Laisa Sartes (UFJF)</string>
    <string name="sobre_4">Prof. Dr. Heder Soares Bernardino (UFJF)</string>
    <string name="sobre_5">Ms. Henrique Pinto Gomide (UFJF)</string>
    <string name="sobre_6">Prof. Ms. Leonardo Fernandes Martins (UFJF)</string>
    <string name="sobre_7">Ms. Andressa Bianchi Gumier (UFJF)</string>
</resources>